# heavyswag

./: .gitignore  justfile  pyproject.toml
.github/workflows/: workflow.yml
src/heavyswag/: __init__.py  constants.py  errors.py  exceptions.py  http.py
src/heavyswag/_internal/: _serializer.py
src/heavyswag/internal/: _serializer.py
src/heavyswag/middlewares/: base.py
src/heavyswag/middlewares/setups/: cors.py  err_handler.py  request_logging.py
src/heavyswag/routes/: application.py  radix_tree.py  router.py
src/heavyswag/specify/: __init__.py  cookie.py  request.py  response.py
tests/: test_serializer.py
tests/unit/factories/: __init__.py  common.py  http.py
tests/unit/routes/: test_radix_tree.py  test_redix_tree.py  test_router.py
tests/unit/serializer/: test_serializer.py
tests/unit/specify/: test_request.py  test_response.py
